<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="detailViewModel"
            type="comanch.simpleplayer.detailFragment.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:transitionGroup="true">

        <TextView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button"
            android:background="@drawable/ic_baseline_detail_arrow_left_36"
            app:layout_constraintBottom_toTopOf="@id/guideline11"
            app:layout_constraintEnd_toStartOf="@id/guideline12"
            app:layout_constraintStart_toStartOf="@id/guideline20"
            app:layout_constraintTop_toBottomOf="@id/guideline22" />

        <TextView
            android:id="@+id/choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/select_images"
            android:textColor="?attr/colorSecondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/guideline11"
            app:layout_constraintEnd_toEndOf="@id/guideline25"
            app:layout_constraintStart_toEndOf="@id/guideline24"
            app:layout_constraintTop_toBottomOf="@id/guideline22" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_with_stroke_choice_image"
            app:layout_constraintBottom_toTopOf="@id/choicePreview"
            app:layout_constraintEnd_toStartOf="@id/guideline25"
            app:layout_constraintStart_toStartOf="@id/guideline24"
            app:layout_constraintTop_toBottomOf="@id/guideline11"
            />

        <TextView
            android:id="@+id/choicePreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/picture_to_the_notification"
            android:textColor="?attr/colorSecondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/imagePlayScreen"
            app:layout_constraintEnd_toStartOf="@id/guideline19"
            app:layout_constraintStart_toStartOf="@id/guideline20"
            app:layout_constraintTop_toBottomOf="@id/imagePreview" />

        <ImageView
            android:id="@+id/imagePlayScreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_with_stroke_choice_image"
            app:layout_constraintBottom_toTopOf="@id/choicePlayScreen"
            app:layout_constraintEnd_toStartOf="@id/guideline25"
            app:layout_constraintStart_toStartOf="@id/guideline24"
            app:layout_constraintTop_toBottomOf="@id/choicePreview" />

        <TextView
            android:id="@+id/choicePlayScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/choicePlayScreen"
            android:textColor="?attr/colorSecondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/guideline17"
            app:layout_constraintEnd_toStartOf="@id/guideline19"
            app:layout_constraintStart_toStartOf="@id/guideline20"
            app:layout_constraintTop_toBottomOf="@id/imagePlayScreen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            style="@style/list_guideline_hor"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            style="@style/list_guideline_ver"
            app:layout_constraintGuide_end="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            style="@style/list_guideline_ver"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="80dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="164dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            style="@style/list_guideline_hor"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="60dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="60dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>